test/scc/decl/semantic-errors/001.a
001.t:2:1: error: redefinition of 'a' with different storage class